// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a basic button 1`] = `
<button
  class="c-gLcEqv c-gLcEqv-kxlbib-variant-primary"
>
  Test
</button>
`;

exports[`Button renders a button with a startIcon 1`] = `
.emotion-0 {
  margin-right: 8px;
}

<button
  class="c-gLcEqv c-gLcEqv-kxlbib-variant-primary"
>
  <span
    class="emotion-0"
  >
    <svg
      data-testid="icon"
    />
  </span>
  Test
</button>
`;

exports[`Button renders a button with an endIcon 1`] = `
.emotion-0 {
  margin-left: 8px;
}

<button
  class="c-gLcEqv c-gLcEqv-kxlbib-variant-primary"
>
  Test
  <span
    class="emotion-0"
  >
    <svg
      data-testid="icon"
    />
  </span>
</button>
`;

exports[`Button renders an icon button 1`] = `
.emotion-0 {
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<button
  class="c-bhXMVC"
  variant="icon"
>
  <span
    class="emotion-0"
  >
    <svg
      data-testid="icon"
    />
  </span>
</button>
`;
